надпись и её позиционирование

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <!-- 		<script src="three.min.js" defer></script>
  -->
 		<style>
+@import url('https://fonts.cdnfonts.com/css/futura-lt');
 body {
 	background: #060813 url(bg.png) center top;
 	margin: 0px;
@@ -73,6 +74,6 @@ body {
 			<canvas id="earth" class="earth"></canvas>
 			<div class="halo"></div>
 		</div>
- 		<script src="earth.js" type="module"></script>
+		<script src="earth.js" type="module"></script>
 	</body>
 </html>
